# Courses

Data_Analysis_Python/Clases/freecodecamp-intro-to-pandas-master/: 1 - Pandas - Series.ipynb  3 - Pandas - DataFrames.ipynb  4 - Pandas DataFrames exercises.ipynb  5 - Pandas - Reading CSV and Basic Plotting.ipynb
Data_Analysis_Python/demographic-data-analyzer/: demographic_data_analyzer.py  pyproject.toml  replit_zip_error_log.txt
Data_Analysis_Python/demographic-data-analyzer/.upm/: store.json
Data_Analysis_Python/mean-variance-standard-deviation-calculator/: main.py  mean_var_std.py  pyproject.toml  replit_zip_error_log.txt
Data_Analysis_Python/mean-variance-standard-deviation-calculator/.upm/: store.json
Data_Analysis_Python/medical-data-visualizer/: medical_data_visualizer.py  pyproject.toml  replit_zip_error_log.txt
Data_Analysis_Python/medical-data-visualizer/.upm/: store.json
Data_Analysis_Python/page-view-time-series-visualizer/: replit_zip_error_log.txt  time_series_visualizer.py
Data_Analysis_Python/page-view-time-series-visualizer/.upm/: store.json
Data_Analysis_Python/sea-level-predictor/: replit_zip_error_log.txt  sea_level_predictor.py
Data_Analysis_Python/sea-level-predictor/.upm/: store.json
Scientific_Computing_Python/arithmetic-formatter/: README.md  arithmetic_arranger.py  main.py  replit_zip_error_log.txt
Scientific_Computing_Python/arithmetic-formatter/.upm/: store.json
Scientific_Computing_Python/time-calculator/: main.py  replit_zip_error_log.txt  time_calculator.py
(+19 files in other folders)
