[tool.poetry]
name = "fcc-mean-var-std"
version = "0.1.0"
description = ""
authors = ["Pedro Masi Burgos <pedromasi06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
